<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/dp_20"
    tools:context=".MainActivity">

    <!-- Relative1 -->
    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/dp_30">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView1"
            android:layout_centerHorizontal="true"
            android:text="@string/text1"
            android:textAlignment="center"
            android:layout_marginTop="8dp"/>
    </RelativeLayout>

    <!-- Relative2 -->
    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/relative1"
        android:layout_marginStart="@dimen/dp_20">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView2"
            android:layout_centerHorizontal="true"
            android:text="@string/text2"
            android:textAlignment="center"
            android:layout_marginTop="8dp"/>
    </RelativeLayout>

    <!-- Relative3 -->
    <RelativeLayout
        android:id="@+id/relative3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/relative2"
        android:layout_marginStart="@dimen/dp_20">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView3"
            android:layout_centerHorizontal="true"
            android:text="@string/text1"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/dp_8"/>
    </RelativeLayout>

    <!-- Relative4  -->
    <RelativeLayout
        android:id="@+id/relative4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative1"
        android:layout_marginTop="@dimen/dp_20">

        <TextView
            android:id="@+id/squareTextView1"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_150"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/cardview_dark_background"
            android:gravity="center"
            android:text="@string/square1"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/squareTextView2"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_150"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/cardview_dark_background"
            android:gravity="center"
            android:text="@string/square2"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="@dimen/dp_55"
            android:layout_height="@dimen/dp_55"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <!-- Relative5 -->
    <RelativeLayout
        android:id="@+id/relative5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative4"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:background="@color/orange">

        <TextView
            android:id="@+id/onTheWayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:text="@string/OnTheWay"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_30" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/onTheWayTextView"
            android:layout_marginTop="@dimen/dp_26"
            android:layout_marginStart="@dimen/dp_20"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </RelativeLayout>

    <!-- Relative6 -->
    <RelativeLayout
        android:id="@+id/relative6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative5"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:background="@color/orange">

        <TextView
            android:id="@+id/onTheWayTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:text="@string/traveller"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_30" />


    </RelativeLayout>

</RelativeLayout>